--- a/templates/personne/index.html.twig
+++ b/templates/personne/index.html.twig
@@ -17,14 +17,10 @@
                 </div>
             </div>
         </div><br>
-
-
-
-
-        <section class="content">
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  <button class="btn btn-info" href="{{ path('personne_new') }}">Create new</button>
+        <section class="content"><br>
             <div class="container-fluid">
                 <div class="container">
-
                     <table id="datatable" class="table table-striped table-bordered mt-2" style="width:100%">
                         <thead>
                         <tr>
@@ -53,7 +49,7 @@
                         {% endfor %}
                         </tbody>
                     </table>
-                    <button class="btn btn-outline-secondary" href="{{ path('personne_new') }}">Create new</button>
+
 
                 </div></div></section></div>
 {% endblock %}
