--- a/templates/personne/show.html.twig
+++ b/templates/personne/show.html.twig
@@ -83,6 +83,10 @@
                 <th>Commenataire</th>
                 <td>{{ personne.commenataire }}</td>
             </tr>
+            <tr>
+                <th>Etat social</th>
+                <td>{{ personne.etat }}</td>
+            </tr>
         </tbody>
     </table>
 
