--- a/templates/personne/edit.html.twig
+++ b/templates/personne/edit.html.twig
@@ -9,5 +9,5 @@
 
     <a href="{{ path('personne_index') }}">back to list</a>
 
-    {{ include('personne/_delete_form.html.twig') <i class="far fa-trash-alt"></i>}}
+    {{ include('personne/_delete_form.html.twig') }}
 {% endblock %}
